--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -62,6 +62,20 @@ header {
   color: var(--secondary-dark);
 }
 
+.cart-count-badge {
+  position: absolute;
+  top: -10px;
+  right: -14px;
+  background-color: #e63946;
+  color: white;
+  border-radius: 50%;
+  font-size: 1rem;
+  padding: 2px 9px;
+}
+.nav-icons {
+  position: relative;
+}
+
 /* Desktop Navigation */
 .nav-links {
   display: flex;
@@ -100,7 +114,7 @@ header {
 
 .nav-icons a {
   color: var(--secondary-dark);
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   transition: var(--transition);
 }
 
