--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -163,6 +163,7 @@
     border: 1px solid var(--secondary-light);
     border-radius: 0.5rem;
     overflow: hidden;
+    margin-bottom: 1rem;
 }
 
 .order-header {
@@ -201,6 +202,7 @@
 
 .order-products {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     padding: 1rem;
     gap: 0.75rem;
