fix: login modal close button in store page

--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -94,7 +94,7 @@ h1 {
   margin-top: auto;
 }
 
-button {
+.add-to-cart-form button {
   background-color: var(--secondary-light);
   border: none;
   padding: 0.5rem;
@@ -106,8 +106,8 @@ button {
   width: 100%;
 }
 
-button:hover,
-button:focus {
+.add-to-cart-form button:hover,
+.add-to-cart-form button:focus {
   background-color: var(--primary-taupe);
   color: var(--primary-white);
   transform: translateY(-2px) scale(1.04);
