--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -485,6 +485,11 @@ footer {
   padding-left: 5px;
 }
 
+.footer-contact form {
+  display: flex;
+  gap: 1rem;
+}
+
 .footer-contact input[type="email"] {
   padding: 0.5rem;
   border: none;
