--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -27,9 +27,16 @@ h1 {
   margin-right: 1.25rem;
 }
 
-.store-nav a:hover {
+.store-nav a:hover, .store-nav a.active {
   transition: var(--transition);
   color: var(--primary-taupe);
+  text-decoration: underline;
+}
+
+.store-nav nav {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .product-grid {
@@ -56,7 +63,6 @@ h1 {
   transition: var(--transition), box-shadow 0.3s;
   cursor: pointer;
   border-radius: 10px;
-  overflow: hidden;
 }
 
 .product-card:hover {
@@ -81,6 +87,13 @@ h1 {
   flex: 1 1 auto;
   justify-content: flex-end;
   padding: 1rem;
+}
+
+.product-info h3 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0.5rem;
 }
 
 .price {
@@ -115,15 +128,19 @@ h1 {
 
 @media (max-width: 576px) {
   .product-grid {
-    gap: 2.5rem;
+    gap: 2rem;
   }
 
   .product-card {
-    width: 200px;
+    width: 125px;
   }
 
   .product-card img {
-    height: 200px;
+    height: 100px;
+  }
+
+  .product-info h3, .price, .add-to-cart-form button {
+    font-size: 0.75rem;
   }
 
   .price-info {
