--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -40,9 +40,10 @@ h1 {
 }
 
 .product-grid {
+  width: 90vw;
   display: flex;
   justify-content: center;
-  gap: 4rem;
+  gap: 3rem;
   flex-wrap: wrap;
   font-family: "Montserrat", sans-serif;
   padding: 1rem;
@@ -57,16 +58,16 @@ h1 {
   flex-direction: column;
   height: 100%;
   height: auto;
-  width: 300px;
+  width: 250px;
   background-color: var(--secondary-dark);
   color: var(--primary-white);
   transition: var(--transition), box-shadow 0.3s;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .product-card:hover {
-  transform: translateY(-10px) scale(1.03);
+  transform: translateY(-5px) scale(1.01);
   box-shadow: 0 10px 24px rgba(0, 0, 0, 0.15);
 }
 
@@ -74,11 +75,6 @@ h1 {
   width: 100%;
   height: 300px;
   object-fit: cover;
-  transition: transform 0.3s;
-}
-
-.product-card:hover img {
-  transform: scale(1.05);
 }
 
 .product-info {
