--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -9,6 +9,13 @@
   padding: 0 2rem;
 }
 
+.promo-banner img {
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
+  display: block;
+}
+
 /* Header */
 .cart-header {
   text-align: center;
