--- a/assets/css/order_detail.css
+++ b/assets/css/order_detail.css
@@ -37,6 +37,8 @@ button:hover {
   background-color: var(--primary-taupe);
   margin-bottom: 1rem;
   font-size: 1.25rem;
+  font-family: var(--font-sub);
+  font-weight: bold;
 }
 
 .item-card:hover {
