--- a/assets/css/error.css
+++ b/assets/css/error.css
@@ -1,9 +1,45 @@
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 90vh;
-    width: 100vw;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+  width: 100vw;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+.container button {
+  background-color: var(--primary-offwhite);
+  border-color: var(--accent);
+  padding: 0.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: var(--secondary-dark);
+  border-radius: 5px;
+  transition: background 0.3s, color 0.3s, transform 0.2s;
+  width: fit-content;
+}
+
+.container button:hover,
+.container button:focus {
+  background-color: var(--accent);
+  color: var(--primary-white);
+  transform: translateY(-2px) scale(1.04);
+}
+
+input[type="email"] {
+  width: fit-content;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
