--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -558,7 +558,8 @@
 }
 
 .form-group input,
-.form-group textarea {
+.form-group textarea,
+.form-group select {
   width: 100%;
   padding: 12px 15px;
   border: none;
@@ -571,7 +572,8 @@
 }
 
 .form-group input:focus,
-.form-group textarea:focus {
+.form-group textarea:focus,
+.form-group select:focus {
   outline: none;
   background-color: #ffffff;
   box-shadow: 0 0 0 3px rgba(74, 93, 35, 0.3);
@@ -581,6 +583,19 @@
 .form-group textarea {
   resize: vertical;
   min-height: 100px;
+}
+
+.form-group select {
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3e%3c/svg%3e");
+  background-position: right 12px center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  padding-right: 40px;
+}
+
+.form-group select::-ms-expand {
+  display: none;
 }
 
 .register-btn {
