--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -797,15 +797,11 @@ footer {
     margin: 20px;
   }
 
-  .modal button {
-    font-size: 1rem;
-  }
-
   .modal-title {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
-  .modal-subtitle {
+  .modal-subtitle, #loginModal input, #loginModal button  {
     font-size: 1rem;
   }
 
